--- a/config.yaml
+++ b/config.yaml
@@ -25,3 +25,10 @@ OWASP:
   OP_OUTPUT_PATH: "root/WebArmor/DATA_FOLDER/owasp_scanning/open_redirect.txt"
   XSS_OUTPUT_PATH: "root/WebArmor/DATA_FOLDER/owasp_scanning/xss.txt"
   SQLI_OUTPUT_PATH: "root/WebArmor/DATA_FOLDER/owasp_scanning/"
+
+
+
+#NETWORK GLOBAL VARIABLES
+NETWORK_SCAN:
+  SCAN_RESULT_PATH: "root/WebArmor/DATA_FOLDER/network_scanning/network_scan.txt"
+
