--- a/config.yaml
+++ b/config.yaml
@@ -36,6 +36,9 @@ NETWORK_SCAN:
 
 #REPORT GLOBAL VARIABLES
 REPORT:
-  REPORT_PATH: "/root/WebArmor/Report.html"
+  MAIN_PAGE_PATH: "/root/WebArmor/Report.html"
+  OWASP_PAGE_PATH: "/root/WebArmor/reporting/utils/owasp.html"
+  NETWORK_PAGE_PATH: "/root/WebArmor/reporting/utils/network.html"
+  
   
 
