--- a/config.yaml
+++ b/config.yaml
@@ -25,6 +25,7 @@ OWASP:
   OP_OUTPUT_PATH: "root/WebArmor/DATA_FOLDER/owasp_scanning/open_redirect.txt"
   XSS_OUTPUT_PATH: "root/WebArmor/DATA_FOLDER/owasp_scanning/xss.txt"
   SQLI_OUTPUT_PATH: "root/WebArmor/DATA_FOLDER/owasp_scanning/sqli_output/"
+  XXE_OUTPUT_PATH: "root/WebArmor/DATA_FOLDER/owasp_scanning/xxe.txt"
 
 
 
