--- a/config.yaml
+++ b/config.yaml
@@ -34,8 +34,8 @@ OWASP:
   OP_OUTPUT_PATH: "/root/WebArmor/DATA_FOLDER/owasp_scanning/open_redirect.txt"
   XSS_OUTPUT_PATH: "/root/WebArmor/DATA_FOLDER/owasp_scanning/xss.txt"
   SQLI_OUTPUT_PATH: "/root/WebArmor/DATA_FOLDER/owasp_scanning/sqli_output/"
-  XXE_OUTPUT_PATH: "/root/WebArmor/DATA_FOLDER/owasp_scanning/xxe.txt"
-  XXE_TEMPS_PATH: "/root/WebArmor/owasp_scanning/utils/xxe-templates/"
+  XXE_SSRF_OUTPUT_PATH: "/root/WebArmor/DATA_FOLDER/owasp_scanning/xxe_ssrf_result.txt"
+  TEMPS_PATH: "/root/WebArmor/owasp_scanning/utils/templates/"
 
 
 
