--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ ASSET_DISCOVERY:
 
 # CRAWL GLOBAL VARIABLES
 CRAWLING_URL_ENUMERATION:
-  OUTPUT_FOLDER_PATH: "/root/WebArmor/DATA_FOLDER/crawling_url_enumeration"
+  OUTPUT_FOLDER_PATH: "/root/WebArmor/DATA_FOLDER/crawling_url_enumeration/all_urls.txt"
 
 # VULNERABILITY_SCAN GLOBAL VARIABLES
 VULNERABILITY_SCANNING:
